--- a/.github/workflows/gradle_deploy.yml
+++ b/.github/workflows/gradle_deploy.yml
@@ -51,8 +51,8 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.HELLO_AWS_KEY }}
       - name: SCP transfer
-        run: scp *.jar ubuntu@${{ secrets.SERVER_IP }}:~/cicd
+        run: scp *.jar ubuntu@$15.165.204.7:~/cicd
       - name: Execute remote commands
         run: |
-          ssh ubuntu@${{ secrets.SERVER_IP }} "sudo fuser -k 8080/tcp"
-          ssh ubuntu@${{ secrets.SERVER_IP }} "sudo nohup java -jar ~/cicd/*.jar &"
+          ssh ubuntu@$15.165.204.7 "sudo fuser -k 8080/tcp"
+          ssh ubuntu@$15.165.204.7 "sudo nohup java -jar ~/cicd/*.jar &"
